--- a/css/config.css
+++ b/css/config.css
@@ -817,15 +817,17 @@ body .jstree .tele-button {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	margin-left: 10px;
+	overflow: hidden;
 }
 
 .tele-request-page-path {
 	float: left;
 	margin-left: 20px;
-	max-width: 250px;
+	max-width: 475px;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	margin-top: 11px;
+	overflow: hidden;
 }
 
 .tele-request .tele-button {
