--- a/css/icons.css
+++ b/css/icons.css
@@ -12,6 +12,7 @@
 	float: left;
 	text-align: center;
 	padding: 5px;
+	margin-top: 6px;
 }
 .tele-control-record div {
 	height: 15px;
